--- a/assets/main.css
+++ b/assets/main.css
@@ -78,7 +78,7 @@ th,td{
 
 /* Website Banner */
 .banner {position: relative; font-family:'Roboto Slab',serif;}
-.top-left {font-size:3em; color: #505050; line-height: 1.5em; background: #fafafa; text-align: center; width: 1000px; height: 10px; position: relative; padding: 36px 0 0 0; top: 0px;}
+.top-left {font-size:3em; color: #505050; background: #fafafa; text-align: center; width: 1000px; height: 0px; position: relative; padding: 36px 0 0 0; top: 0px;}
 .bottom-right {font-size:2.33em; color: #fafafa; line-height: 1.5em; width: auto; height: 100px; padding: 0px 27px 27px 0px; text-align: right; position: absolute; bottom: 0px; right: 0px; text-shadow: 0px 0px 6px #000000;}
 
 /* Conference Title Logo */
